closes #79 upgrade to php8
fixes some small issues in sdk

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ config/.api_secret
 api.sqlite
 nbproject/project.properties
 nbproject/project.xml
+/adminer/
+/downloads/
+/xdebug.log
+/classes/xdebug.log
